[build-system]
requires = [
  'meson-python',
  'meson',
  'cmake',  # for nanobind
  'wheel',
]

build-backend= 'mesonpy'

[project]
name = 'pd-bitmask'
dynamic = ['version']
description = 'Bitmask implementation for pandas which adheres to the buffer protocol'
authors = [
  { name = 'Will Ayd', email='william.ayd@icloud.com' },
]
license = {file = 'LICENSE'}
requires-python = '>=3.9'
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Environment :: Console',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Topic :: Scientific/Engineering'
]

[tool.cibuildwheel]
build = "cp39-*64 cp310-*64 cp311-*64 cp312-*64"
skip = "*musllinux*"

test-command = "pytest {project}/tests"
test-requires = ["pytest", "numpy"]

[tool.cibuildwheel.windows]
before-build = "pip install delvewheel"
repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel}"

# https://github.com/mesonbuild/meson-python/discussions/629
[tool.meson-python.args]
install = ['--skip-subprojects=nanoarrow']
